# bank-marketing

./: features.csv  metrics.csv  params.yml  pyproject.toml
bank_marketing/: __init__.py  train.py
data/: .gitignore  bank-additional.csv.dvc
data/processed/: x_test.csv.dvc  x_train.csv.dvc  y_test.csv.dvc  y_train.csv.dvc
data/sample/: fake_data.csv
models/: .gitignore  pipe_lr.pkl.dvc
tests/: conftest.py  test_train.py
