[tool.poetry]
name = "bank-marketing"
version = "0.1.0"
description = ""
authors = ["muditmathur11 <muditmathur@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scipy = "1.8.1"
scikit-learn = "1.1.1"
pandas = "^1.4.2"
dagshub = "^0.1.8"
dvc = {extras = ["ssh"], version = "^2.11.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
bandit = "^1.7.4"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
